refactor: handlers and fix db
