# apps/server/docs/swagger.json
@@ -18,7 +18,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.HealthResponse"
+                            "$ref": "#/definitions/server_internal_models.HealthResponse"
                         }
                     }
                 }
@@ -40,7 +40,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/server_internal_schemas.Todo"
+                                "$ref": "#/definitions/server_internal_models.Todo"
                             }
                         }
                     }
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.CreateTodoRequest"
+                            "$ref": "#/definitions/server_internal_models.CreateTodoRequest"
                         }
                     }
                 ],
@@ -73,7 +73,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.Todo"
+                            "$ref": "#/definitions/server_internal_models.Todo"
                         }
                     },
                     "400": {
@@ -108,7 +108,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.Todo"
+                            "$ref": "#/definitions/server_internal_models.Todo"
                         }
                     },
                     "400": {
@@ -151,7 +151,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.UpdateTodoRequest"
+                            "$ref": "#/definitions/server_internal_models.UpdateTodoRequest"
                         }
                     }
                 ],
@@ -159,7 +159,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server_internal_schemas.Todo"
+                            "$ref": "#/definitions/server_internal_models.Todo"
                         }
                     },
                     "400": {
@@ -212,35 +212,66 @@
         }
     },
     "definitions": {
-        "server_internal_schemas.CreateTodoRequest": {
+        "server_internal_models.CreateTodoRequest": {
             "type": "object",
             "required": [
                 "text"
             ],
             "properties": {
                 "actualHours": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "cost": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "dueDate": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 },
                 "estimatedHours": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "label": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "bug",
+                        "feature",
+                        "doc"
+                    ]
                 },
                 "priority": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoPriority"
+                    "enum": [
+                        "low",
+                        "medium",
+                        "high"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/server_internal_models.TodoPriority"
+                        }
+                    ]
                 },
                 "progress": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 0
                 },
                 "status": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoStatus"
+                    "enum": [
+                        "backlog",
+                        "todo",
+                        "in_progress",
+                        "done",
+                        "canceled"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/server_internal_models.TodoStatus"
+                        }
+                    ]
                 },
                 "text": {
                     "type": "string",
@@ -248,7 +279,7 @@
                 }
             }
         },
-        "server_internal_schemas.HealthResponse": {
+        "server_internal_models.HealthResponse": {
             "type": "object",
             "properties": {
                 "arch": {
@@ -293,23 +324,29 @@
                 }
             }
         },
-        "server_internal_schemas.Todo": {
+        "server_internal_models.Todo": {
             "type": "object",
+            "required": [
+                "text"
+            ],
             "properties": {
                 "actualHours": {
                     "type": "number"
                 },
                 "completedAt": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 },
                 "cost": {
                     "type": "number"
                 },
                 "createdAt": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 },
                 "dueDate": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 },
                 "estimatedHours": {
                     "type": "number"
@@ -321,24 +358,25 @@
                     "type": "string"
                 },
                 "priority": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoPriority"
+                    "$ref": "#/definitions/server_internal_models.TodoPriority"
                 },
                 "progress": {
                     "type": "integer"
                 },
                 "status": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoStatus"
+                    "$ref": "#/definitions/server_internal_models.TodoStatus"
                 },
                 "text": {
                     "type": "string",
                     "minLength": 1
                 },
                 "updatedAt": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 }
             }
         },
-        "server_internal_schemas.TodoPriority": {
+        "server_internal_models.TodoPriority": {
             "type": "string",
             "enum": [
                 "low",
@@ -351,7 +389,7 @@
                 "TodoPriorityHigh"
             ]
         },
-        "server_internal_schemas.TodoStatus": {
+        "server_internal_models.TodoStatus": {
             "type": "string",
             "enum": [
                 "backlog",
@@ -368,38 +406,70 @@
                 "TodoStatusCanceled"
             ]
         },
-        "server_internal_schemas.UpdateTodoRequest": {
+        "server_internal_models.UpdateTodoRequest": {
             "type": "object",
             "properties": {
                 "actualHours": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "completedAt": {
                     "type": "string"
                 },
                 "cost": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "dueDate": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date"
                 },
                 "estimatedHours": {
-                    "type": "number"
+                    "type": "number",
+                    "minimum": 0
                 },
                 "label": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "bug",
+                        "feature",
+                        "doc"
+                    ]
                 },
                 "priority": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoPriority"
+                    "enum": [
+                        "low",
+                        "medium",
+                        "high"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/server_internal_models.TodoPriority"
+                        }
+                    ]
                 },
                 "progress": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 100,
+                    "minimum": 0
                 },
                 "status": {
-                    "$ref": "#/definitions/server_internal_schemas.TodoStatus"
+                    "enum": [
+                        "backlog",
+                        "todo",
+                        "in_progress",
+                        "done",
+                        "canceled"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/server_internal_models.TodoStatus"
+                        }
+                    ]
                 },
                 "text": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 1
                 }
             }
         }
